Correction of TEST-04. Overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -263,8 +263,8 @@ body {
 
 .header-button {
   min-height: 37px;
-  width: 160px;
-  padding: 8px 10px;
+  min-width: 160px;
+  padding: 9px 10px;
   box-sizing: border-box;
   align-self: center;
 }
